[tool.poetry]
name = "solana-wallet-tracker"
version = "0.1.0"
description = "A Telegram bot that tracks Solana wallet transactions"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^20.7"
solana = "^0.30.2"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.1"
asyncio = "^3.4.3"
base58 = "^2.1.1"
solders = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 